--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
     "date-fns": "^2.28.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
